--- a/lindera-ipadic-neologd/Cargo.toml
+++ b/lindera-ipadic-neologd/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 [features]
 ipadic-neologd = []
 compress = ["lindera-dictionary/compress"]
+default = ["compress"]
 
 [dependencies]
 bincode.workspace = true
