--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
-lindera-dictionary = { version = "0.43.3", path = "lindera-dictionary", default-features = false }
+lindera-dictionary = { version = "0.43.3", path = "lindera-dictionary" }
 lindera-cc-cedict = { version = "0.43.3", path = "lindera-cc-cedict" }
 lindera-ipadic = { version = "0.43.3", path = "lindera-ipadic" }
 lindera-ipadic-neologd = { version = "0.43.3", path = "lindera-ipadic-neologd" }
@@ -63,7 +63,7 @@ tokio = { version = "1.45.1", features = [
 ] }
 unicode-blocks = "0.1.9"
 unicode-normalization = "0.1.24"
-unicode-segmentation = "1.11.0"
+unicode-segmentation = "1.12.0"
 yada = "0.5.1"
 
 [profile.release]
