--- a/lindera-cc-cedict/Cargo.toml
+++ b/lindera-cc-cedict/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 [features]
 cc-cedict = []
 compress = ["lindera-dictionary/compress"]
+default = ["compress"]
 
 [dependencies]
 bincode.workspace = true
