--- a/lindera-ko-dic/Cargo.toml
+++ b/lindera-ko-dic/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 [features]
 ko-dic = []
 compress = ["lindera-dictionary/compress"]
+default = ["compress"]
 
 [dependencies]
 bincode.workspace = true
