--- a/lindera-unidic/Cargo.toml
+++ b/lindera-unidic/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 [features]
 unidic = []
 compress = ["lindera-dictionary/compress"]
+default = ["compress"]
 
 [dependencies]
 bincode.workspace = true
