--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -34,6 +34,7 @@ once_cell.workspace = true
 rand.workspace = true
 reqwest = { workspace = true, optional = true }
 serde.workspace = true
+serde_json.workspace = true
 tar = { workspace = true }
 thiserror.workspace = true
 tokio.workspace = true
