--- a/lindera-ipadic-neologd/Cargo.toml
+++ b/lindera-ipadic-neologd/Cargo.toml
@@ -20,6 +20,7 @@ default = ["compress"]
 bincode.workspace = true
 byteorder.workspace = true
 once_cell.workspace = true
+serde_json.workspace = true
 
 lindera-dictionary.workspace = true
 
