--- a/lindera-ipadic/Cargo.toml
+++ b/lindera-ipadic/Cargo.toml
@@ -17,8 +17,10 @@ compress = ["lindera-dictionary/compress"]
 default = ["compress"]
 
 [dependencies]
+anyhow.workspace = true
 bincode.workspace = true
 byteorder.workspace = true
+csv.workspace = true
 once_cell.workspace = true
 serde_json.workspace = true
 
