--- a/lindera-ipadic/Cargo.toml
+++ b/lindera-ipadic/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT"
 
 [features]
 ipadic = []
+embed-ipadic = ["ipadic"]                  # Embed IPADIC dictionary in the binary
 compress = ["lindera-dictionary/compress"]
 default = ["compress"]
 
