Allow to embed all dictionaries

--- a/lindera-cc-cedict/Cargo.toml
+++ b/lindera-cc-cedict/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT"
 
 [features]
 cc-cedict = []
+embedded-cc-cedict = ["cc-cedict"]         # Embed CC-CEDICT dictionary in the binary
 compress = ["lindera-dictionary/compress"]
 default = ["compress"]
 
