--- a/lindera-ipadic-neologd/Cargo.toml
+++ b/lindera-ipadic-neologd/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT"
 
 [features]
 ipadic-neologd = []
+embedded-ipadic-neologd = ["ipadic-neologd"]  # Embed IPADIC-NEologd dictionary in the binary
 compress = ["lindera-dictionary/compress"]
 default = ["compress"]
 
