Move dictionary specific builders to their respective crates (#526)
* Move dictionary specific builders to their respective crates

* Refactoring

* Refactoring

* Add comments

* Add build.rs

* Embedded IPADIC

* Allow to embed all dictionaries

* Fix tests

* Refactoring

* Fix features

* Add DictionaryLoader trait

* Fix dictionary loader

* Add UserDictionaryLoader

* Fix lint

* Fix format

--- a/lindera-cc-cedict/Cargo.toml
+++ b/lindera-cc-cedict/Cargo.toml
@@ -13,12 +13,15 @@ license = "MIT"
 
 [features]
 cc-cedict = []
+embedded-cc-cedict = ["cc-cedict"]         # Embed CC-CEDICT dictionary in the binary
 compress = ["lindera-dictionary/compress"]
 default = ["compress"]
 
 [dependencies]
+anyhow.workspace = true
 bincode.workspace = true
 byteorder.workspace = true
+csv.workspace = true
 once_cell.workspace = true
 serde_json.workspace = true
 
