--- a/lindera-unidic/Cargo.toml
+++ b/lindera-unidic/Cargo.toml
@@ -13,12 +13,15 @@ license = "MIT"
 
 [features]
 unidic = []
+embedded-unidic = ["unidic"]                # Embed UniDic dictionary in the binary
 compress = ["lindera-dictionary/compress"]
 default = ["compress"]
 
 [dependencies]
+anyhow.workspace = true
 bincode.workspace = true
 byteorder.workspace = true
+csv.workspace = true
 once_cell.workspace = true
 serde_json.workspace = true
 
