--- a/lindera-ipadic-neologd/Cargo.toml
+++ b/lindera-ipadic-neologd/Cargo.toml
@@ -13,12 +13,15 @@ license = "MIT"
 
 [features]
 ipadic-neologd = []
+embedded-ipadic-neologd = ["ipadic-neologd"]  # Embed IPADIC-NEologd dictionary in the binary
 compress = ["lindera-dictionary/compress"]
 default = ["compress"]
 
 [dependencies]
+anyhow.workspace = true
 bincode.workspace = true
 byteorder.workspace = true
+csv.workspace = true
 once_cell.workspace = true
 serde_json.workspace = true
 
