--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -21,6 +21,28 @@ ko-dic = ["lindera-ko-dic/ko-dic"] # Include Korean dictionary (ko-dic)
 cc-cedict = [
     "lindera-cc-cedict/cc-cedict",
 ] # Include Chinese dictionary (CC-CEDICT)
+
+embedded-ipadic = [
+    "ipadic",
+    "lindera-ipadic/embedded-ipadic",
+] # Embed IPADIC dictionary in the binary
+embedded-unidic = [
+    "unidic",
+    "lindera-unidic/embedded-unidic",
+] # Embed UniDic dictionary in the binary
+embedded-ko-dic = [
+    "ko-dic",
+    "lindera-ko-dic/embedded-ko-dic",
+] # Embed ko-dic dictionary in the binary
+embedded-cc-cedict = [
+    "cc-cedict",
+    "lindera-cc-cedict/embedded-cc-cedict",
+] # Embed CC-CEDICT dictionary in the binary
+embedded-ipadic-neologd = [
+    "ipadic-neologd",
+    "lindera-ipadic-neologd/embedded-ipadic-neologd",
+] # Embed IPADIC-NEologd dictionary in the binary
+
 cjk = [
     "ipadic",
     "ko-dic",
@@ -36,6 +58,7 @@ cjk3 = [
     "ko-dic",
     "cc-cedict",
 ] # Include CJK dictionaries (IPADIC NEologd, ko-dic, CC-CEDICT)
+
 compress = [
     "lindera-dictionary/compress",
     "lindera-ipadic?/compress",
@@ -45,6 +68,7 @@ compress = [
     "lindera-cc-cedict?/compress",
 ] # Compress dictionaries
 mmap = ["lindera-dictionary/mmap"] # Use memory-mapped file
+
 default = ["compress", "mmap"]
 
 [dependencies]
@@ -77,6 +101,13 @@ lindera-cc-cedict = { workspace = true, optional = true }
 serde_json.workspace = true
 criterion.workspace = true
 once_cell.workspace = true
+
+[[example]]
+name = "test_features"
+required-features = ["embedded-ipadic"]
+
+[[example]]
+name = "test_all_embedded_features"
 
 [[bench]]
 name = "bench"
