--- a/lindera-ipadic-neologd/Cargo.toml
+++ b/lindera-ipadic-neologd/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-ipadic-neologd"
-version = "0.45.0"
+version = "1.0.0"
 edition = "2024"
 description = "A Japanese morphological dictionary for IPADIC NEologd."
 documentation = "https://docs.rs/lindera-ipadic-neologd"
@@ -13,7 +13,9 @@ license = "MIT"
 
 [features]
 ipadic-neologd = []
-embedded-ipadic-neologd = ["ipadic-neologd"]  # Embed IPADIC-NEologd dictionary in the binary
+embedded-ipadic-neologd = [
+    "ipadic-neologd",
+] # Embed IPADIC-NEologd dictionary in the binary
 compress = ["lindera-dictionary/compress"]
 default = ["compress"]
 
