refactor: Reorganize dictionary features and add new CJK variants

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,24 +79,30 @@ jobs:
           - value: "default"
             package_name: "lindera"
             package_description: "Lindera (no dictionary)"
-          - value: "ipadic"
+          - value: "embedded-ipadic"
             package_name: "lindera-ipadic"
             package_description: "Lindera with Japanese dictionary (IPADIC)"
-          - value: "ipadic-neologd"
+          - value: "embedded-ipadic-neologd"
             package_name: "lindera-ipadic-nelneologd"
             package_description: "Lindera with Japanese dictionary (IPADIC-NEologd)"
-          - value: "unidic"
+          - value: "embedded-unidic"
             package_name: "lindera-unidic"
             package_description: "Lindera with Japanese dictionary (UniDic)"
-          - value: "ko-dic"
+          - value: "embedded-ko-dic"
             package_name: "lindera-ko-dic"
             package_description: "Lindera with Korean dictionary (ko-dic)"
-          - value: "cc-cedict"
+          - value: "embedded-cc-cedict"
             package_name: "lindera-cc-cedict"
             package_description: "Lindera with Chinese dictionary (CC-CEDICT)"
-          - value: "cjk"
+          - value: "embedded-cjk"
             package_name: "lindera-cjk"
             package_description: "Lindera with CJK dictionaries (IPADIC, ko-dic, CC-CEDICT)"
+          - value: "embedded-cjk2"
+            package_name: "lindera-cjk2"
+            package_description: "Lindera with CJK dictionaries (UniDic, ko-dic, CC-CEDICT)"
+          - value: "embedded-cjk3"
+            package_name: "lindera-cjk3"
+            package_description: "Lindera with CJK dictionaries (IPADIC NEologd, ko-dic, CC-CEDICT)"
 
     runs-on: ${{ matrix.platform.runner }}
     steps:
