--- a/resources/lindera.yml
+++ b/resources/lindera.yml
@@ -1,10 +1,7 @@
 segmenter:
   mode: "normal"
-  dictionary:
-    kind: "ipadic"
-  # user_dictionary:
-  #   path: "./resources/ipadic_simple.csv"
-  #   kind: "ipadic"
+  dictionary: "embedded://ipadic"
+  # user_dictionary: "./resources/ipadic_simple.csv"
 
 character_filters:
   - kind: "unicode_normalize"
