--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ tokio = { version = "1.47.1", features = [
 unicode-blocks = "0.1.9"
 unicode-normalization = "0.1.24"
 unicode-segmentation = "1.12.0"
+url = "2.5.4"
 yada = "0.5.1"
 
 [profile.release]
