--- a/lindera-ipadic/Cargo.toml
+++ b/lindera-ipadic/Cargo.toml
@@ -28,5 +28,6 @@ serde_json.workspace = true
 lindera-dictionary.workspace = true
 
 [build-dependencies]
+serde_json.workspace = true
 tokio.workspace = true
 lindera-dictionary = { workspace = true, features = ["build_rs"] }
