--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -163,6 +163,7 @@ jobs:
           draft: false
           prerelease: false
           generate_release_notes: true
+          make_latest: false
 
   publish-crates:
     name: Publish crate
