--- a/lindera-unidic/Cargo.toml
+++ b/lindera-unidic/Cargo.toml
@@ -12,8 +12,7 @@ categories = ["text-processing"]
 license = "MIT"
 
 [features]
-unidic = []
-embedded-unidic = ["unidic"]               # Embed UniDic dictionary in the binary
+embedded-unidic = []                       # Embed UniDic dictionary in the binary
 compress = ["lindera-dictionary/compress"]
 default = ["compress"]
 
