fix: Replace Url::to_file_path() with manual path extraction for WASM compatibility

--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -63,6 +63,7 @@ byteorder.workspace = true
 csv.workspace = true
 kanaria.workspace = true
 once_cell.workspace = true
+percent-encoding.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
