--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ log = "0.4.27"
 md5 = "0.8.0"
 memmap2 = "0.9.8"
 once_cell = "1.21.3"
+percent-encoding = "2.3.1"
 rand = { version = "0.9.2", default-features = false, features = [
     "small_rng",
 ] } # Specify `default-features` and `features` to support WebAssembly
