--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
           draft: false
           prerelease: false
           generate_release_notes: true
-          make_latest: false
+          make_latest: true
 
   release:
     name: Build
