--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ lindera-ipadic = { version = "1.2.0", path = "lindera-ipadic" }
 lindera-ipadic-neologd = { version = "1.2.0", path = "lindera-ipadic-neologd" }
 lindera-ko-dic = { version = "1.2.0", path = "lindera-ko-dic" }
 lindera-unidic = { version = "1.2.0", path = "lindera-unidic" }
-lindera = { version = "1.2.0", path = "lindera" }
+lindera = { version = "1.2.0", path = "lindera", default-features = false }
 lindera-cli = { version = "1.2.0", path = "lindera-cli" }
 
 anyhow = "1.0.99"
@@ -48,8 +48,9 @@ regex = "1.11.2"
 reqwest = { version = "0.12.23", features = [
     "rustls-tls",
 ], default-features = false } # use rustls-tls instead of native-tls which avoids the need to link openssl
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.143"
+rucrf = "0.3.3"
+serde = { version = "1.0.223", features = ["derive"] }
+serde_json = "1.0.145"
 serde_yaml = "0.9.34"
 strum = { version = "0.27.2", features = ["derive"] }
 strum_macros = "0.27.2"
