--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -15,6 +15,7 @@ license = "MIT"
 build_rs = ["dep:reqwest"]
 compress = []
 mmap = ["dep:memmap2"]
+train = ["dep:rucrf"]
 default = ["compress", "mmap"]
 
 [dependencies]
@@ -30,9 +31,11 @@ flate2 = { workspace = true }
 glob.workspace = true
 log.workspace = true
 md5.workspace = true
+memmap2 = { workspace = true, optional = true }
 once_cell.workspace = true
 rand.workspace = true
 reqwest = { workspace = true, optional = true }
+rucrf = { workspace = true, optional = true }
 serde.workspace = true
 serde_json.workspace = true
 strum.workspace = true
@@ -41,7 +44,6 @@ tar = { workspace = true }
 thiserror.workspace = true
 tokio.workspace = true
 yada.workspace = true
-memmap2 = { workspace = true, optional = true }
 
 [dev-dependencies]
 rand.workspace = true
