--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -34,6 +34,7 @@ md5.workspace = true
 memmap2 = { workspace = true, optional = true }
 once_cell.workspace = true
 rand.workspace = true
+regex.workspace = true
 reqwest = { workspace = true, optional = true }
 rucrf = { workspace = true, optional = true }
 serde.workspace = true
