--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ kanaria = "0.2.0"
 log = "0.4.28"
 md5 = "0.8.0"
 memmap2 = "0.9.8"
+num_cpus = "1.17.0"
 once_cell = "1.21.3"
 percent-encoding = "2.3.1"
 rand = { version = "0.9.2", default-features = false, features = [
