--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -32,6 +32,7 @@ glob.workspace = true
 log.workspace = true
 md5.workspace = true
 memmap2 = { workspace = true, optional = true }
+num_cpus.workspace = true
 once_cell.workspace = true
 rand.workspace = true
 regex.workspace = true
