--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,13 @@ lindera-ipadic = { version = "1.2.0", path = "lindera-ipadic" }
 lindera-ipadic-neologd = { version = "1.2.0", path = "lindera-ipadic-neologd" }
 lindera-ko-dic = { version = "1.2.0", path = "lindera-ko-dic" }
 lindera-unidic = { version = "1.2.0", path = "lindera-unidic" }
-lindera = { version = "1.2.0", path = "lindera", default-features = false }
+lindera = { version = "1.2.0", path = "lindera" }
 lindera-cli = { version = "1.2.0", path = "lindera-cli" }
 
-anyhow = "1.0.99"
+anyhow = "1.0.100"
 bincode = { version = "2.0.1", features = ["serde"] }
 byteorder = "1.5.0"
-clap = { version = "4.5.47", features = ["derive", "cargo"] }
+clap = { version = "4.5.48", features = ["derive", "cargo"] }
 criterion = { version = "0.7.0", default-features = false, features = [
     "html_reports",
 ] }
@@ -50,7 +50,7 @@ reqwest = { version = "0.12.23", features = [
     "rustls-tls",
 ], default-features = false } # use rustls-tls instead of native-tls which avoids the need to link openssl
 rucrf = "0.3.3"
-serde = { version = "1.0.223", features = ["derive"] }
+serde = { version = "1.0.226", features = ["derive"] }
 serde_json = "1.0.145"
 serde_yaml = "0.9.34"
 strum = { version = "0.27.2", features = ["derive"] }
